--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ header {
 .header_logo--img {
     width: 55px;
     border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .header_title--txt {
@@ -40,6 +41,22 @@ header {
     padding: 2% 10% 2% 10%;
 }
 
+.main_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.main_title {
+    display: inline-block;
+}
+
+.main_posts {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
 /*.main_highlight {
     
 }*/
@@ -50,12 +67,6 @@ header {
     text-align: left;
     padding-left: 24px;
 }
-
-.main_highlight--img {
-    width: 600px;
-    border-radius: 20px;
-}
-
 
 
 /*Popular y categorías*/
@@ -68,14 +79,15 @@ header {
     align-items: start;
 }
 
-/*.popular-and-categories_title {
+.popular-and-categories_title {
     display:inline-block;
-}*/
+}
 
 /*cards*/
 .popular-cards {
-    display: grid;
-    flex-direction: column;
+    display: block;
+
+    /*flex-direction: column;*/
 
     /*flex-wrap: wrap*/
 }
@@ -87,7 +99,15 @@ header {
     flex-direction: column;
     margin-right: 16px;
     margin-bottom: 32px;
+}
 
+.card-post--XL {
+    width: 600px;
+}
+
+.card-post--horiz {
+    width: 298px;
+    flex-direction: row;
 }
 
 .card-post_img {
@@ -98,15 +118,41 @@ header {
 
 }
 
-.card-post_info {
+.card-post_img--XL {
+    width: 600px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 20px;
+
+}
+
+.card-post_img--horiz {
+    width: 198px;
+    height: 145px;
+    margin-right: 8px;
+}
+
+/*.card-post_info {
     margin: 20px 0 6px 0;
-    width: 298px;
+    display: flex;
+}*/
+
+.card-post_info--horiz {
+    display: flex;
+    flex-direction: column;
+    width: 100px;
 }
 
 .card-post_date {
     font-weight: 400;
     font-size: 18px;
     margin-top: 8px;
+}
+
+.card-post_date--horiz {
+    font-size: 16px;
+    margin-top: 8px;
+    display: inline;
 }
 
 .card-post_title {
@@ -116,10 +162,31 @@ header {
     margin-bottom: 8px;
 }
 
+.card-post_title--horiz {
+
+    display: block;
+}
+
+.card-post_title--XL {
+    display: inline;
+    width: 600px;
+}
+
+
+
 .card-post_user {
     display: flex;
     align-items: center;
     margin-bottom: 8px;
+}
+
+.card-post_user--horiz {
+    height: 40px;
+}
+
+
+.card-post_username {
+    font-size: 16px;
 }
 
 .card-post_user--round {
@@ -127,12 +194,13 @@ header {
     height: 40px;
     border-radius: 50%;
     margin-right: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /*Categorías*/
 /*lista de stack tecnológico e ítems*/
 
-.categores-list {
+.categories-list {
     display: flex;
     flex-direction: column;
     /*espacio entre ítems?*/
